components/Window/Window.module.scss
@use "styles/colours";
@use "styles/screens";
@use "styles/fonts";

.window {
  position: fixed;
  border: 2px solid colours.$cornflower;
  font-size: 16px;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  transition: all 0.3s;
  opacity: 0;
  transform: scale(0);
  &.open {
    opacity: 1;
    transform: scale(1);
  }
}

.focused {
  border-image: colours.$gradient 1;
  .top_bar {
    background: colours.$cornflower;
    color: colours.$whisper;
  }
}

.react-draggable-dragging {
  opacity: 0.9;
  .top_bar {
    cursor: move;
  }
}
.content {
  flex: 1;
  overflow: hidden;
  min-width: 14rem;
  min-height: 1rem;
}

.top_bar {
  width: 100%;
  background: colours.$steelgrey;
  color: colours.$grey;
  cursor: default;
  display: flex;
  height: 2rem;
  align-items: center;
  justify-content: center;
}

.title {
  font-family: fonts.$monospace-font;
  font-size: 0.9rem;
  font-weight: bold;
  text-align: center;
  margin: 0.3rem;
  width: calc(100% - 180px);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.control_buttons {
  position: absolute;
  display: flex;
  right: 0rem;
}

.icon {
  position: absolute;
  display: flex;
  left: 0.4rem;
  width: 1rem;
  height: 1rem;
}

.control_button {
  width: 1.2rem;
  height: 1.2rem;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  font-size: 0.7rem;
  cursor: pointer;
  margin: 0 0.2rem;

  :hover,
  :focus {
    background: colours.$steelgrey;
    color: colours.$whisper;
  }
}

